[package]
name = "ascii-to-hex"
version = "0.1.0"
edition = "2021"
description = "A small, simple library to converting an ASCII text string into its hexadecimal equivalent."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AjiBuster499/ascii-to-hex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
